# KataGo

./: .gitignore  plan.md  pyproject.toml
configs/: config.yaml  prompts.json
docs/: PYG.md
eval/: __init__.py  config.json  download_reference_models.py  eval.py  game.py  ladder.py  llm_player.py
eval/players/: __init__.py  base.py  huggingface_player.py  katago_player.py  openai_player.py
runtime/: README.md  analysis_server.py  analyze_offline.py  artifacts.md  compose.yml  config.yaml  download_game_data.sh  enroot_create.pbs  enroot_shell.sh  enroot_start.pbs  extract_positions.py  fetch_katago_artifacts.sh  get_katago_model_urls.py  get_katago_release_assets.py  katago_server.pbs  manage_servers.sh  prepare_katago_data.py  serve_analysis.sh  test_analysis.sh
runtime/assets/analysis/inputs/: lategame_19.jsonl  midgame_19.jsonl  tsumego_13.jsonl  tsumego_9a.jsonl  tsumego_9b.jsonl
runtime/assets/analysis/outputs/: lategame_19.jsonl  midgame_19.jsonl  tsumego_13.jsonl  tsumego_9a.jsonl  tsumego_9b.jsonl
runtime/benchmark/: bench_matrix.csv  extract_results.sh  run_benchmarks.sh  select_best.sh
runtime/benchmark/results/20260119_122335/: best.tsv  best_config.yaml  cuda_t128_b128_v800_n20_s19_gpu.csv  cuda_t192_b192_v1200_n50_s19_gpu.csv  cuda_t256_b256_v2000_n100_s19_gpu.csv  cuda_t384_b384_v3000_n200_s19_gpu.csv  cuda_t64_b64_v800_n10_s19_gpu.csv  summary.tsv  trt_t128_b128_v800_n20_s19_gpu.csv  trt_t192_b192_v1200_n50_s19_gpu.csv  (+3 more)
tests/: run_tests.pbs  test_eval.py
train/: reward.py  sample.ipynb  train.pbs  train.sh
train/online_env/: README.md
